feat: 重构 Telegram bot 并添加 webhook 支持
- 重构主程序结构，优化日志记录和错误处理
- 添加 Hypercorn 作为 ASGI 服务器支持 webhook 模式
- 更新 requirements.txt 文件，精简依赖项
- 改进授权检查和 webhook 状态监控
- 添加 Procfile 用于部署配置

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-python-telegram-bot==21.6
-flask[async]
-python-dotenv==1.0.0
-notion-client==2.2.0
-uvicorn
-pytz
-aiohttp
-asyncio
+Flask
+python-telegram-bot
+httpx # python-telegram-bot 依赖
+hypercorn # 用于 Webhook 模式的 ASGI 服务器
+# notion_client # 如果您与 Notion API 交互
+# anyio # hypercorn 可能依赖
+# httpcore # hypercorn 可能依赖
