fix: 修复授权用户解析并锁定python-telegram-bot版本
- 将AUTHORIZED_USERS的解析逻辑从字符串分割改为从环境变量获取并转换为整数列表，避免空字符串导致的异常
- 锁定python-telegram-bot版本为21.6以确保依赖稳定性

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask[async]
-python-telegram-bot>=21.6
+python-telegram-bot==21.6
 httpx # python-telegram-bot 依赖
 hypercorn # 用于 Webhook 模式的 ASGI 服务器
 notion_client # 如果您与 Notion API 交互
