refactor: 重构项目结构并迁移到FastAPI框架
- 将Flask应用重构为FastAPI框架，提升性能和现代化程度
- 拆分bot_setup模块，分离机器人初始化逻辑
- 重构notion_bot_utils，简化媒体组处理并添加文件上传辅助函数
- 更新requirements.txt依赖项，添加FastAPI相关依赖
- 新增run_local_bot.py作为本地运行入口
- 优化配置管理，移除默认值并改进授权用户处理
- 添加Webhook状态检查端点
- 实现统一的上传API接口

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-python-telegram-bot==21.6
-Flask==3.0.3
-python-dotenv==1.0.0
-notion-client==2.2.0
+python-telegram-bot>=21.6
+httpx # python-telegram-bot 依赖
+notion_client # 如果您与 Notion API 交互
+python-dotenv
 uvicorn
 pytz
 aiohttp
+fastapi
+asyncio
+werkzeug
+python-multipart
